<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="354dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/enter_your_name"
                android:inputType="textCapWords"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/topping"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/toppings"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />
            <CheckBox
                android:id="@+id/whippedCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:textSize="22sp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="10dp"/>
            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textSize="22sp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/quantity"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/quantity"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/decrease_value"
                    android:layout_marginLeft="16dp"
                    android:onClick="decrement"
                    android:layout_marginStart="16dp" />
                <TextView
                    android:id="@+id/quantityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" />

                <Button
                    android:id="@+id/increase"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/increase_value"
                    android:layout_marginLeft="16dp"
                    android:onClick="increment"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/orderSummary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/order_summary"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />
            <TextView
                android:id="@+id/orderSummaryDetails"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="$0"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="submitOrder"
                android:layout_marginStart="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>